--- a/package.json
+++ b/package.json
@@ -44,9 +44,14 @@
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
+    "cors": "^2.8.5",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "express": "^4.17.1",
+    "mongodb": "^3.6.1",
+    "mongoose": "^5.10.2",
     "node-sass": "^4.13.0",
+    "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
