--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "react-scripts test --noStackTrace",
     "test-all": "react-scripts test --watchAll=false --noStackTrace",
     "test-related": "react-scripts test --watchAll=false --noStackTrace --findRelatedTests",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "npx nodemon backend/server.js"
   },
   "husky": {
     "hooks": {
